--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+html, body, #app, #app>div {
+  height: 100%
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a, a:link, a:visited {
+  text-decoration: none;
+  color: black;
 }
